--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "@angular/material": "20.2.14",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
-    "@tailwindcss/postcss": "^4.1.18",
+    "@fortawesome/fontawesome-free": "^7.1.0",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.3.8",
     "keycloak-js": "^26.0.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.1.18",
     "tslib": "^2.3.0",
     "zone.js": "^0.16.0"
@@ -42,6 +45,7 @@
     "@angular/build": "^20.3.14",
     "@angular/cli": "^20.3.14",
     "@angular/compiler-cli": "^20.3.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
